public/stylesheets/style.css
:root {
    --primary: #00addb;
    --secondary: #ccdad1;
    --tertiary: #e9db8c;
    --light-dark: #666e6f;
    --dark: #38302e;
    --border-radius: 0.3rem;
  }
  
  * {
    box-sizing: border-box;
    margin: 0px
  }
  
  body {
    background-color: var(--primary);
    margin: 0;
    padding: 0;
    font-family: "IBM Plex Sans", sans-serif;
    color: var(--dark);
    line-height: 1.5;
    font-size: 16px;
  }
  
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: 700;
    margin: 0;
    color: var(--dark);
    line-height: 1.25;
  }

  h1
    {
      font-weight: 700;
      margin: 10px;
      color: var(--dark);
      line-height: 1.25;
    }

  main {
    display: flex;
    flex-wrap: wrap;
    margin: 20px auto;
    width: 94%;
  }
  
  p {
    font-weight: 400;
    font-size: 1.2rem;
    margin: 10px
  }
  
  .btn {
    font-size: 1.3rem;
    text-decoration: none;
    padding: 6px 5px;
    width: 100%;
    display: block;
    margin: 5px 0;
    border-radius: var(--border-radius);
    color: var(--primary);
    border: none;
    outline: none;
    background-color: var(--light-dark);
    box-shadow: 3px 3px var(--dark);
    transform: translate(-1px, -1px);
  }
  
  .delete-post-btn {
    font-size: 1.3rem;
    text-decoration: none;
    padding: 6px 5px;
    width: 100%;
    display: block;
    margin: 5px 0;
    border-radius: var(--border-radius);
    color: red;
    border: none;
    outline: none;
    background-color: var(--light-dark);
    box-shadow: 3px 3px var(--dark);
    transform: translate(-1px, -1px);
  }
  
  .btn:hover {
    color: var(--primary);
    background-color: var(--tertiary);
    transform: translate(0, 0);
    box-shadow: 2px 2px var(--dark);
  }
  
  .btn-inline {
    display: inline;
  }
  
  .btn-back {
    border-radius: var(--border-radius);
    color: var(--primary);
    border: none;
    outline: none;
    background-color: var(--light-dark);
    box-shadow: 3px 3px var(--secondary);
    transform: translate(-1px, -1px);
    display: inline-block;
    width: auto;
    margin-top: 20px;
    padding: 15px;
    text-decoration: none;
    font-size: 1.2rem;
  }
  
  .btn-back:hover {
    color: var(--primary);
    background-color: var(--tertiary);
    transform: translate(0, 0);
    box-shadow: 2px 2px var(--dark);
  }
  
  .hero {
    padding: 3% 4%;
    background-color: var(--dark);
    color: var(--primary);
  }

  nav {
    display: flex;
    justify-content: space-evenly;
  }

  .hero p {
    max-width: 75%;
  }
  
  .app-title {
    font-size: 3rem;
    background-color: var(--primary);
    color: var(--dark);
    padding: 0 10px;
    display: inline-block;
    border-radius: var(--border-radius);
    box-shadow: 6px 5px var(--light-dark);
  }
  
  a {
    font-size: 15px;
    background-color: var(--primary);
    color: var(--dark);
    padding: 10px 30px 7px 30px;
    display: inline-block;
    border-radius: var(--border-radius);
    box-shadow: 6px 5px var(--light-dark);
    text-decoration: none;
    align-items: center;
  }
  
  
  /* CARDS */
  .card {
    width: 500px;
    height: fit-content;
    margin: 0 0 20px 0;
    border: 3px solid var(--dark);
    border-radius: var(--border-radius);
  }
  
  .card-header {
    color: var(--primary);
    background-color: var(--dark);
    padding: 2.5%;
    border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
  }
  
  .card-body {
    padding: 2.5%;
  }

  .card-image .image {
    height: 225px;
  }

  #all-cards {
    display: flex;
    justify-content: space-between;
  }
  
  /* FORM */
  .form-label,
  .form-input,
  .form-textarea {
    display: block;
  }
  
  .form-label {
    font-size: 1.1rem;
    margin: 0 0 0 5px;
  }
  
  .form-input {
    width: 100%;
    padding: 3%;
    margin: 5px 0;
    font-size: 1.2rem;
    border: 2px solid var(--light-dark);
    border-radius: var(--border-radius);
  }
  
  /* HEIGHT / WIDTH UTILS */
  .min-100-vh {
    min-height: 100vh;
  }
  
  .min-100-vw {
    min-width: 100vw;
  }
  
  /* FONT UTILS */
  .text-uppercase {
    text-transform: uppercase;
  }
  
  /* FLEX CONTENT */
  .flex-row {
    display: flex;
    flex-wrap: wrap;
  }
  
  .flex-column {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
  }
  
  .justify-space-between {
    justify-content: space-between;
  }
  
  .justify-space-around {
    justify-content: space-around;
  }
  
  .justify-flex-start {
    justify-content: flex-start;
  }
  
  .justify-flex-end {
    justify-content: flex-end;
  }
  
  .justify-center {
    justify-content: center;
  }
  
  .align-stretch {
    align-items: stretch;
  }
  
  .align-end {
    align-items: flex-end;
  }
  
  .align-center {
    align-items: center;
  }
  
  .col-auto {
    flex-grow: 1;
  }
  
  .col-1 {
    flex: 0 0 calc(100% * 1 / 12 - 2%);
  }
  
  .col-2 {
    flex: 0 0 calc(100% * 2 / 12 - 2%);
  }
  
  .col-3 {
    flex: 0 0 calc(100% * 3 / 12 - 2%);
  }
  
  .col-4 {
    flex: 0 0 calc(100% * 4 / 12 - 2%);
  }
  
  .col-5 {
    flex: 0 0 calc(100% * 5 / 12 - 2%);
  }
  
  .col-6 {
    flex: 0 0 calc(100% * 6 / 12 - 2%);
  }
  
  .col-7 {
    flex: 0 0 calc(100% * 7 / 12 - 2%);
  }
  
  .col-8 {
    flex: 0 0 calc(100% * 8 / 12 - 2%);
  }
  
  .col-9 {
    flex: 0 0 calc(100% * 9 / 12 - 2%);
  }
  
  .col-10 {
    flex: 0 0 calc(100% * 10 / 12 - 2%);
  }
  
  .col-11 {
    flex: 0 0 calc(100% * 11 / 12 - 2%);
  }
  
  .col-12 {
    flex: 0 0 100%;
  }
  
  /* col-sm */
  @media screen and (min-width: 640px) {
    .col-sm-1 {
      flex: 0 0 calc(100% * 1 / 12 - 2%);
    }
  
    .col-sm-2 {
      flex: 0 0 calc(100% * 2 / 12 - 2%);
    }
  
    .col-sm-3 {
      flex: 0 0 calc(100% * 3 / 12 - 2%);
    }
  
    .col-sm-4 {
      flex: 0 0 calc(100% * 4 / 12 - 2%);
    }
  
    .col-sm-5 {
      flex: 0 0 calc(100% * 5 / 12 - 2%);
    }
  
    .col-sm-6 {
      flex: 0 0 calc(100% * 6 / 12 - 2%);
    }
  
    .col-sm-7 {
      flex: 0 0 calc(100% * 7 / 12 - 2%);
    }
  
    .col-sm-8 {
      flex: 0 0 calc(100% * 8 / 12 - 2%);
    }
  
    .col-sm-9 {
      flex: 0 0 calc(100% * 9 / 12 - 2%);
    }
  
    .col-sm-10 {
      flex: 0 0 calc(100% * 10 / 12 - 2%);
    }
  
    .col-sm-11 {
      flex: 0 0 calc(100% * 11 / 12 - 2%);
    }
  
    .col-sm-12 {
      flex: 0 0 100%;
    }
  }
  
  /* col-md */
  @media screen and (min-width: 768px) {
    .col-md-1 {
      flex: 0 0 calc(100% * 1 / 12 - 2%);
    }
  
    .col-md-2 {
      flex: 0 0 calc(100% * 2 / 12 - 2%);
    }
  
    .col-md-3 {
      flex: 0 0 calc(100% * 3 / 12 - 2%);
    }
  
    .col-md-4 {
      flex: 0 0 calc(100% * 4 / 12 - 2%);
    }
  
    .col-md-5 {
      flex: 0 0 calc(100% * 5 / 12 - 2%);
    }
  
    .col-md-6 {
      flex: 0 0 calc(100% * 6 / 12 - 2%);
    }
  
    .col-md-7 {
      flex: 0 0 calc(100% * 7 / 12 - 2%);
    }
  
    .col-md-8 {
      flex: 0 0 calc(100% * 8 / 12 - 2%);
    }
  
    .col-md-9 {
      flex: 0 0 calc(100% * 9 / 12 - 2%);
    }
  
    .col-md-10 {
      flex: 0 0 calc(100% * 10 / 12 - 2%);
    }
  
    .col-md-11 {
      flex: 0 0 calc(100% * 11 / 12 - 2%);
    }
  
    .col-md-12 {
      flex: 0 0 100%;
    }
  }
  
  /* col-lg */
  @media screen and (min-width: 992px) {
    .col-lg-1 {
      flex: 0 0 calc(100% * 1 / 12 - 2%);
    }
  
    .col-lg-2 {
      flex: 0 0 calc(100% * 2 / 12 - 2%);
    }
  
    .col-lg-3 {
      flex: 0 0 calc(100% * 3 / 12 - 2%);
    }
  
    .col-lg-4 {
      flex: 0 0 calc(100% * 4 / 12 - 2%);
    }
  
    .col-lg-5 {
      flex: 0 0 calc(100% * 5 / 12 - 2%);
    }
  
    .col-lg-6 {
      flex: 0 0 calc(100% * 6 / 12 - 2%);
    }
  
    .col-lg-7 {
      flex: 0 0 calc(100% * 7 / 12 - 2%);
    }
  
    .col-lg-8 {
      flex: 0 0 calc(100% * 8 / 12 - 2%);
    }
  
    .col-lg-9 {
      flex: 0 0 calc(100% * 9 / 12 - 2%);
    }
  
    .col-lg-10 {
      flex: 0 0 calc(100% * 10 / 12 - 2%);
    }
  
    .col-lg-11 {
      flex: 0 0 calc(100% * 11 / 12 - 2%);
    }
  
    .col-lg-12 {
      flex: 0 0 100%;
    }
  }
  
  /* col-xl */
  @media screen and (min-width: 1200px) {
    .col-xl-1 {
      flex: 0 0 calc(100% * 1 / 12 - 2%);
    }
  
    .col-xl-2 {
      flex: 0 0 calc(100% * 2 / 12 - 2%);
    }
  
    .col-xl-3 {
      flex: 0 0 calc(100% * 3 / 12 - 2%);
    }
  
    .col-xl-4 {
      flex: 0 0 calc(100% * 4 / 12 - 2%);
    }
  
    .col-xl-5 {
      flex: 0 0 calc(100% * 5 / 12 - 2%);
    }
  
    .col-xl-6 {
      flex: 0 0 calc(100% * 6 / 12 - 2%);
    }
  
    .col-xl-7 {
      flex: 0 0 calc(100% * 7 / 12 - 2%);
    }
  
    .col-xl-8 {
      flex: 0 0 calc(100% * 8 / 12 - 2%);
    }
  
    .col-xl-9 {
      flex: 0 0 calc(100% * 9 / 12 - 2%);
    }
  
    .col-xl-10 {
      flex: 0 0 calc(100% * 10 / 12 - 2%);
    }
  
    .col-xl-11 {
      flex: 0 0 calc(100% * 11 / 12 - 2%);
    }
  
    .col-xl-12 {
      flex: 0 0 100%;
    }
  }

